# haskell-uber-cradle-example

./: hie.yaml
src/: Uber.hs
subproject/: CHANGELOG.md  cabal.project  subproject.cabal
subproject/src/: Sub.hs
subproject2/: CHANGELOG.md  README.md  subproject2.cabal
