cabal-version:       >=1.10

name:                subproject
version:             0.1.0.0
license-file:        LICENSE
author:              Lyndon Maydwell
maintainer:          lyndon@sordina.net
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  build-depends:       base >=4.14 && <4.15
  hs-source-dirs: src
  default-language:    Haskell2010
