cabal-version:       >=1.10
name:                uber-cradle-example
version:             0.1.0.0
license-file:        LICENSE
author:              Lyndon Maydwell
maintainer:          lyndon@sordina.net
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  hs-source-dirs: src
  build-depends:       base >=4.14 && <4.15
  default-language:    Haskell2010
  exposed-modules:
    Uber
